# DJI-Remote

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md  log_config.c  log_config.h  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.m5stack_basic_v27  sdkconfig.defaults.waveshare_s3_lcd19
.github/workflows/: release.yml
ble/: ble.c  ble.h
data/: data.c  data.h
docs/: hardware-waveshare-s3-lcd19.md  implementation.md  manual.md
docs/ui/: UI-SPEC-320x170.md  UI-SPEC.md
gps/: gps_reader.c  gps_reader.h
logic/: command_logic.c  command_logic.h  connect_logic.c  connect_logic.h  enums_logic.c  light_logic.c  status_logic.c  status_logic.h
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  boot_logo.c  boot_logo.h  icons.c  icons.h  idf_component.yml  lvgl_icons.c  lvgl_icons.h  m5stack_basic_v27_hal.c  m5stack_basic_v27_hal.h  splash_logo.c  splash_logo.h  ui.c  ui.h  ui_layout.c  ui_layout.h  ui_screen_main.c  ui_screen_main.h  ui_screen_mode_switch.c  ui_screen_mode_switch.h  ui_screen_pairing.c  ui_screen_pairing.h  ui_screen_settings.c  ui_screen_settings.h  ui_screen_splash.c  ui_screen_splash.h  waveshare_s3_lcd19_hal.c  waveshare_s3_lcd19_hal.h
protocol/: dji_protocol_data_descriptors.c  dji_protocol_data_descriptors.h  dji_protocol_data_processor.c  dji_protocol_data_structures.c  dji_protocol_data_structures.h  dji_protocol_parser.c
tools/: dji_status_parser.html  png_to_lvgl_a8.py
tools/flash/: README.txt  flash-mac.sh  flash-win.bat
tools/release/: build_release.sh
utils/crc/: custom_crc16.c  custom_crc32.c
